@@ -1,3 +1,9 @@
+2008-10-19  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	at-spi, atk and gnome-icon-theme has been branched for GNOME 2.24.
+
 2008-10-18  Gil Forcada  <gforcada@gnome.org>
 
 	* gnome-modules.xml.in:
